--- a/Calculator/Base.lproj/LaunchScreen.storyboard
+++ b/Calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +18,42 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="cXf-fx-GOa">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="XjR-cx-Oxs">
+                                <rect key="frame" x="0.0" y="488" width="600" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="XjR-cx-Oxs" secondAttribute="height" multiplier="4:1" id="NY4-Ed-eXH"/>
+                                    <constraint firstAttribute="height" constant="150" id="Usz-9B-lgv"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="tOK-dv-fLe">
+                                <rect key="frame" x="20" y="28" width="560" height="121"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="RgY-Xm-Gfj">
+                                <rect key="frame" x="103" y="219" width="395" height="162"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="395" id="JzM-xX-cFs"/>
+                                    <constraint firstAttribute="height" constant="162" id="kBb-B5-GP3"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RgY-Xm-Gfj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="1rG-zJ-NgN"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="cXf-fx-GOa" secondAttribute="bottom" id="2O9-j0-GUs"/>
+                            <constraint firstAttribute="trailing" secondItem="cXf-fx-GOa" secondAttribute="trailing" id="4rO-oA-bYG"/>
+                            <constraint firstItem="tOK-dv-fLe" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="7Bg-Mn-jIh"/>
+                            <constraint firstItem="cXf-fx-GOa" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="82G-g8-fPD"/>
+                            <constraint firstItem="tOK-dv-fLe" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="Bfe-c8-FgC"/>
+                            <constraint firstItem="RgY-Xm-Gfj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Dgd-oH-fw8"/>
+                            <constraint firstItem="tOK-dv-fLe" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="FVr-pn-cwF"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="XjR-cx-Oxs" secondAttribute="bottom" constant="-38" id="G6W-WU-4kb"/>
+                            <constraint firstItem="tOK-dv-fLe" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" id="Nlp-60-wg5"/>
+                            <constraint firstItem="cXf-fx-GOa" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="tEj-g4-kAS"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +61,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
